@@ -1,6 +1,8 @@
+// SecurityConfig.java (MODIFICADO)
 package com.suportflow.backend.config;
 
 import com.suportflow.backend.security.JwtAuthenticationFilter;
+import com.suportflow.backend.service.auth.ClienteDetailsService; // Importe o novo serviço
 import com.suportflow.backend.service.auth.UserDetailsServiceImpl;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
@@ -9,6 +11,7 @@ import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder; // Usaremos AuthenticationManagerBuilder
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -37,35 +40,54 @@ public class SecurityConfig {
     private UserDetailsServiceImpl userDetailsService;
 
     @Autowired
-    private PasswordEncoder passwordEncoder;
+    private ClienteDetailsService clienteDetailsService; // Injete o novo serviço
 
+    @Autowired
+    private PasswordEncoder passwordEncoder;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) //Adicionado o corsConfigurationSource
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/api/users/register").permitAll() // Permite o registro
-                        .requestMatchers("/h2-console/**").permitAll() // Permite o console do H2 (apenas para desenvolvimento!)
+                        .requestMatchers("/api/users/register").permitAll()
+                        .requestMatchers("/api/clientes/register").permitAll() // Adicione a permissão para o registro de clientes
+                        .requestMatchers("/h2-console/**").permitAll()
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authenticationProvider(authenticationProvider())
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
-        // Configuração para o H2 Console (apenas para desenvolvimento!)
         http.headers(headers -> headers.frameOptions(frameOptions -> frameOptions.disable()));
 
         return http.build();
     }
 
+    //Não precisa mais do authenticationProvider
+    // Configure AuthenticationManagerBuilder (ISSO SUBSTITUI o authenticationProvider)
+    @Autowired
+    public void configureGlobal(AuthenticationManagerBuilder auth) throws Exception {
+        auth.authenticationProvider(userAuthenticationProvider())
+                .authenticationProvider(clienteAuthenticationProvider());
+    }
+
+    // AuthenticationProvider para USUÁRIOS
     @Bean
-    public AuthenticationProvider authenticationProvider() {
+    public AuthenticationProvider userAuthenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
         authProvider.setUserDetailsService(userDetailsService);
         authProvider.setPasswordEncoder(passwordEncoder);
+        return authProvider;
+    }
+
+    // AuthenticationProvider para CLIENTES (NOVO)
+    @Bean
+    public AuthenticationProvider clienteAuthenticationProvider() {
+        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+        authProvider.setUserDetailsService(clienteDetailsService);
+        authProvider.setPasswordEncoder(passwordEncoder); // Usa o MESMO PasswordEncoder
         return authProvider;
     }
 
@@ -74,16 +96,14 @@ public class SecurityConfig {
         return config.getAuthenticationManager();
     }
 
-     // Configuração do CORS (Cross-Origin Resource Sharing)
-        @Bean
-        CorsConfigurationSource corsConfigurationSource() {
-            CorsConfiguration configuration = new CorsConfiguration();
-            configuration.setAllowedOrigins(List.of("*")); // Permite todas as origens (NÃO RECOMENDADO PARA PRODUÇÃO!)
-            configuration.setAllowedMethods(Arrays.asList("GET","POST", "PUT", "DELETE", "OPTIONS", "PATCH")); // Métodos permitidos
-            configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type")); // Headers permitidos
-           // configuration.setAllowCredentials(true); // Permitir credenciais (cookies, etc.) - Se necessário
-            UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-            source.registerCorsConfiguration("/**", configuration); // Aplica a configuração a todos os endpoints
-            return source;
-        }
+    @Bean
+    CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
 }
